optimise and clean up KS tests; re-do docs; write draft readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,19 +12,20 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-** NOTE: This is an untested and undocumented toy reimplementation. **
+** NOTE: This is an untested and poorly documented toy reimplementation of 
+[lbozhilova/Kimura-Distribution)](https://github.com/lbozhilova/Kimura-Distribution). **
 
 # kimura
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of kimura is to fit a Kimura dsitribution to heteroplasmy data and 
+The goal of `kimura` is to fit Kimura dsitributions to heteroplasmy data and 
 test for evidence of selection pressure.
 
 ## Installation
 
-You can install the development version of kimura from [GitHub](https://github.com/) with:
+You can install the development version of `kimura` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -33,25 +34,40 @@ devtools::install_github("lbozhilova/kimura")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+The principal purpose of this package is to perform hypothesis test for the presence of selection pressure in
+mtDNA heteroplasmy distributions (Wonnapinij et al., 2008). This can be done like so:
 
-```{r example}
+```{r example, warning=FALSE}
 library(kimura)
-## basic example code
+
+# Load some heteroplasmy data
+h <- c(0.06, 0.08, 0.27, 0.37, 0.40, 0.45, 0.56, 0.61, 0.75, 0.79)
+
+# Carry out test for selection 
+test_kimura(h)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+There is also some additional functionality for generating data from the Kimura distirbution.
 
-```{r cars}
-summary(cars)
+```{r example2, warning=FALSE}
+# Initialise Kimura parameters
+p <- 0.3250
+b <- 0.01257
+
+# Probability of allele loss
+dkimura(0, p, b)
+# Probability of fixing an allele
+dkimura(1, p, b)
+
+# Kimura(p, d) CDF at 0.1 intervals
+pkimura(seq(0, 1, 0.1), p, b)
+
+# Random number generation
+rkimura(10, p, b)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
+## References
 
-You can also embed plots, for example:
+Wonnapinij, Passorn, Patrick F. Chinnery, and David C. Samuels. "The distribution of mitochondrial DNA heteroplasmy due to random genetic drift." The American Journal of Human Genetics 83.5 (2008): 582-593.
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+Kimura, Motoo. "Solution of a process of random genetic drift with a continuous model." Proceedings of the National Academy of Sciences of the United States of America 41.3 (1955): 144.
